ingress-vh/https/svc3.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: app3-dm
spec:
  replicas: 3
  template:
    metadata:
      labels:
        name: app3
    spec:
      containers:
        - name: app3-cont
          image: wangyanglinux/myapp:v3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: app3 # should be the same as template labels.
